fixed the alignment problem

--- a/css/simple_pages.css
+++ b/css/simple_pages.css
@@ -1,44 +1,50 @@
 @import "header.css";
 @import "footer.css";
-
-#simple_page_container{
+#simple_page_container {
   display: block;
+  text-align: center;
 }
 
-.cash_c_d{
+.cash_c_d {
   padding-top: 3rem;
 }
-.cash_c_d .shop_title{
-  font-size:1rem;
-  font-family:MicrosoftYaHei;
-  color:#8A8A8A;
-  line-height:1rem;
+
+.cash_c_d .shop_title {
+  font-size: 1rem;
+  font-family: MicrosoftYaHei;
+  color: #8A8A8A;
+  line-height: 1rem;
   text-align: center;
   margin-bottom: 3rem;
 }
-.cash_c_d .detail_box{
-  width: 7rem;
-  margin: 0 auto;
-  font-size:0.67rem;
-  color:#777777;
-  line-height:1rem;
+
+.cash_c_d .detail_box {
+  min-width: 7rem;
+  max-width: 13rem;
+  display: inline-block;
+  font-size: 0.67rem;
+  color: #777777;
+  line-height: 1rem;
   margin-bottom: .44rem;
+  text-align: left;
 }
-.cash_c_d .share_notice{
+
+.cash_c_d .share_notice {
   text-align: center;
-  font-size:0.53rem;
-  line-height:.6rem;
+  font-size: 0.53rem;
+  line-height: .6rem;
   margin-bottom: 4rem;
 }
-.cash_c_d .use_coupon{
+
+.cash_c_d .use_coupon {
   display: block;
-  width:7.56rem;
-  height:1.24rem;
-  background:#41C416;
+  width: 7.56rem;
+  height: 1.24rem;
+  background: #41C416;
   border-radius: 0.2rem;
-  font-size:0.67rem;
-  color:#fff;
-  line-height:1.24rem;
+  font-size: 0.67rem;
+  color: #fff;
+  line-height: 1.24rem;
   text-align: center;
   margin: 0 auto;
   letter-spacing: .1rem;
